--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "app",
-  "version": "0.0.1",
-  "description": "-",
-  "main": "app.js",
-  "repository": "-",
+  "name": "simple-tts-mp3",
+  "version": "1.1.0",
+  "description": "Converts text to mp3 audio using google-tts-api, it hasn't a limit",
+  "main": "index.js",
+  "types": "simple-tts-mp3.d.ts",
   "scripts": {
-    "start": "node app.js"
+    "test": "node ./test/test.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eliangerard/simple-tts-mp3.git"
+  },
+  "keywords": [
+    "tts",
+    "text-to-speech",
+    "discord",
+    "mp3"
+  ],
+  "author": "Elian Gerard",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/eliangerard/simple-tts-mp3/issues"
+  },
+  "homepage": "https://github.com/eliangerard/simple-tts-mp3#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "javascript-obfuscator": "^4.0.2",
-    "google-tts-api": "^2.0.2",
-    "cors": "^2.8.5"
+    "google-tts-api": "^2.0.2"
   }
 }
